* Allow overriding kickstart ROM file again.
* Ask to "upgrade" (install) FS-UAE / QEMU-UAE / CAPSImg if not installed.
* Start/redirect to newer Launcher, if it exists, from plugin dir.
* Remember splitter position also when collapsed.

* Remember splitter position + menu entry to restore default size.
* Splitters to choose config list and screenshots panel size.
* Remember window position, size and maximization state.
* Code refactoring, adding type hints to code (work in progress).
* User interface got a facelift (work in progress).

Version 3.1.0dev:

* Better support for high-DPI displays.
* Basic support for Amiga CD entries for non-CDTV/CD32 platforms.
* File scanner can in some cases deduce SHA-1 from file name (faster).

Version 3.0.0:

* Fixes a problem when launching WHDLoad archived games with OpenRetro
  database enabled and with a matching orhaned variant in the database.
* Imported updated translations from crowdin.com.

Version 2.9.12dev:

* Fixed recently introduced bug when downloading files via cache.

Version 2.9.11dev:

* Plugins can provide files for offline use (WHDLoad, JST, SKick, etc).
* Use newer version of uae-configuration, OSEmu.400.
* Added support for .xz-compressed files.
* GUI options to toggle game mode / governor warning on Linux.

Version 2.9.10dev:

* Support WHDLoad versions 18.4 and 18.5 (game database).
* Revert fullscreen_mode to default when upgrading from older versions.
* Hide the fullscreen mode button from quick settings panel.
* Fix OpenRetro.org login, rebranded oagd.net to openretro.org.
* Use requests library for all http(s) communication, fixes macOS cert issue.

Version 2.9.9dev:

* Support hd_requirements = xpkmaster.library.
* Use https:// for more fs-uae.net and openretro.org communication.
* Only preselect the favorite variant if the files are found.
* Added 8BitDo controller configurations, updated dualshock 3 for Linux.
* Index uncompressed content of .gz/.adz/.roz files.