@@ -1,6 +1,7 @@
 #!/usr/bin/env python3
 # This file is automatically generated by fs-package
 
+import json
 import os
 import subprocess
 import sys
@@ -48,8 +49,10 @@ def macos_dmg_path():
     return path
 
 
-def macos_bundle_path():
-    path = f"fsbuild/_build/{package_name_pretty}/macOS/{arch}/{app}"
+def macos_bundle_path(prefix="fsbuild/_build/"):
+    path = f"{prefix}{package_name_pretty}/macOS/{arch}/{app}"
+    if prefix != "fsbuild/_build/":
+        return path
     if os.path.exists(path):
         return path
     raise Exception("Could not find any app or framework bundle")
@@ -73,24 +76,48 @@ def build_dmg():
     print(f"Building {path.basename(dmgPath)}")
     if not path.exists(path.dirname(dmgPath)):
         os.makedirs(path.dirname(dmgPath))
-    appPath = macos_bundle_path()
-    settingsPath = "fsbuild/_build/dmgbuild-settings.py"
-    with open(settingsPath, "w", encoding="UTF-8") as f:
-        f.write("format = 'UDZO'\n")
-        f.write("files = [\n")
-        f.write(f"    '{appPath}',\n")
-        f.write("]\n")
-        f.write("symlinks = { 'Applications': '/Applications' }\n")
-        f.write("badge_icon = 'icon/fs-uae-launcher.icns'\n")
-    subprocess.check_call(
-        [
-            "dmgbuild",
-            "-s",
-            settingsPath,
-            "FS-UAE-Launcher",
-            dmgPath,
-        ]
-    )
+    if os.path.exists(dmgPath):
+        os.unlink(dmgPath)
+    tool = "appdmg"
+    if tool == "appdmg":
+        appPath = macos_bundle_path(prefix="")
+        settingsPath = "fsbuild/_build/appdmg.json"
+        with open(settingsPath, "w", encoding="UTF-8") as f:
+            json.dump({
+                "title": package_name_pretty,
+                "contents": [
+                    { "x": 192, "y": 344, "type": "file", "path": appPath},
+                    { "x": 448, "y": 344, "type": "link", "path": "/Applications"}
+                ]
+            }, f)
+        subprocess.check_call(
+            [
+                "appdmg",
+                settingsPath,
+                dmgPath,
+           ]
+        )
+    elif tool == "dmgbuild":
+        appPath = macos_bundle_path()
+        settingsPath = "fsbuild/_build/dmgbuild-settings.py"
+        with open(settingsPath, "w", encoding="UTF-8") as f:
+            f.write("format = 'UDZO'\n")
+            f.write("files = [\n")
+            f.write(f"    '{appPath}',\n")
+            f.write("]\n")
+            f.write("symlinks = { 'Applications': '/Applications' }\n")
+            f.write("badge_icon = 'icon/fs-uae-launcher.icns'\n")
+        subprocess.check_call(
+            [
+                "dmgbuild",
+                "-s",
+                settingsPath,
+                "FS-UAE-Launcher",
+                dmgPath,
+            ]
+        )
+    else:
+        raise Exception("Unknown dmg builder")
 
 
 def sign_dmg():
@@ -187,9 +214,12 @@ def main():
     if sys.platform != "darwin":
         print("Not creating DMG (non-macOS platform)")
         sys.exit(0)
-    build_dmg()
-    sign_dmg()
-    notarize_dmg()
+    if len(sys.argv) == 1 or "--build" in sys.argv:
+        build_dmg()
+    if len(sys.argv) == 1 or "--sign" in sys.argv:
+        sign_dmg()
+    if len(sys.argv) == 1 or "--notarize" in sys.argv:
+        notarize_dmg()
 
 
 if __name__ == "__main__":
