@@ -2,6 +2,7 @@
 # This file is automatically generated by fs-package
 
 import os
+import platform
 import subprocess
 import sys
 import time
@@ -22,7 +23,12 @@ package_name_pretty = package["PACKAGE_NAME_PRETTY"]
 bundle_id = package["PACKAGE_MACOS_BUNDLE_ID"]
 app = package_name_pretty + ".app"
 framework = package_name_pretty + ".framework"
-arch = "x86-64"  # FIXME
+
+machine = platform.machine()
+if machine == "arm64":
+    arch = "ARM64"
+else:
+    arch = "x86-64"  # FIXME
 
 apple_id_user = os.environ.get("NOTARIZATION_USERNAME", "")
 itc_provider = os.environ.get("NOTARIZATION_PROVIDER", "")
