@@ -2,6 +2,7 @@
 # This file is automatically generated by fs-package
 
 import os
+import platform
 import subprocess
 import sys
 import time
@@ -20,7 +21,12 @@ if package["PACKAGE_TYPE"] == "fs-data-plugin":
 package_name_pretty = package["PACKAGE_NAME_PRETTY"]
 app = package_name_pretty + ".app"
 framework = package_name_pretty + ".framework"
-arch = "x86-64"  # FIXME
+
+machine = platform.machine()
+if machine == "arm64":
+    arch = "ARM64"
+else:
+    arch = "x86-64"  # FIXME
 
 # def get_package():
 #     global _package_name
